--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+               "node_modules/font-awesome/scss/font-awesome.scss",
+               "node_modules/bootstrap/scss/bootstrap.scss"
             ],
-            "scripts": []
+            "scripts": [
+              // "../node_modules/auth0-js/build/auth0.min.js"
+            ]
           },
           "configurations": {
             "production": {
