--- a/package.json
+++ b/package.json
@@ -20,18 +20,28 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@auth0/angular-jwt": "^2.1.0",
+    "angular-google-charts": "^0.1.3",
+    "angular-oauth2-oidc": "^5.0.2",
+    "angular2-jwt": "^0.2.3",
+    "auth0-js": "^9.10.0",
+    "auth0-lock": "^11.14.0",
+    "bootstrap": "^4.2.1",
+    "bootstrap-social": "^5.1.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.13.1",
     "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
