--- a/package.json
+++ b/package.json
@@ -26,18 +26,23 @@
     "angular2-jwt": "^0.2.3",
     "auth0-js": "^9.10.0",
     "auth0-lock": "^11.14.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "bootstrap-social": "^5.1.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mongoose": "^5.4.15",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
+    "save": "^2.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.1",
     "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
