--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
+  },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "6.8.0"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cli": "~7.0.3",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -41,8 +48,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
