--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cdk": "~7.0.2",
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/common": "~7.0.0",
