--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
+    "typescript": "~3.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -63,7 +64,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "tslint": "~5.11.0"
   }
 }
