--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/animations": "~7.0.0",
     "@angular/cdk": "~7.0.2",
     "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "^7.2.6",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -42,6 +42,7 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.15",
+    "path": "^0.12.7",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
