A great change. Ihe app is now fully responsive

--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "bootstrap-social": "^5.1.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.15",
+    "ng2-charts": "^2.0.0-beta.21",
+    "ng2-tooltip-directive": "^2.1.8",
     "path": "^0.12.7",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
