--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
                "node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": [
-              // "../node_modules/auth0-js/build/auth0.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/chart.js/dist/Chart.bundle.js"
+
             ]
           },
           "configurations": {
